--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.airbnb.android:lottie:3.6.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.etebarian:meow-bottom-navigation-java:1.2.0'
 }
