--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     implementation 'com.airbnb.android:lottie:3.6.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.etebarian:meow-bottom-navigation-java:1.2.0'
+    implementation 'com.loopj.android:android-async-http:1.4.11'
 }
