--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SIH">
         <activity
+            android:name=".WeatherPage"
+            android:exported="true" />
+        <activity
             android:name=".data_details"
             android:exported="false" />
         <activity
